# gcal

./: CLAUDE.md  Cargo.toml  DESIGN.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: alias_handler.rs  app.rs  cli.rs  cli_mapper.rs  config.rs  date_parser.rs  domain.rs  error.rs  event_selector.rs  lib.rs  main.rs  output.rs  ports.rs  prompt_flow.rs
src/ai/: client.rs  mod.rs  output.rs  types.rs
src/auth/: callback.rs  flow.rs  mod.rs  provider.rs
src/gcal_api/: client.rs  models.rs
src/parser/: datetime.rs  duration.rs  mod.rs  recurrence.rs  reminders.rs  util.rs
